# mayflower-coding-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yml  pyproject.toml
PreparingPhase/: GamePlan.md  TICKETS.md
app/: app.py  local_demo.py
app/src/: endpoint.py
app/src/core/: audio_utils.py  config.py  pipeline.py  service_provider.py
app/src/models/: telegramMessage.py
app/src/service/: llm_service.py  stt_service.py  summarizer_service.py  telegram_service.py  tts_service.py  twilio_service.py
documents/: GAMEPLAN.md  IMPROVEMENTS.md  PRESENTATION.md  TICKETS.md
k8s/: deployment.yaml  secret.yaml.example  service.yaml
tests/: test_e2e.py
